fix(menu): menu alignment fixed

--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -214,7 +214,7 @@ ul#menu {
                             color: #fff;
                         }
                         &.ul-partners, &.ul-products, &.ul-blog {
-                            top: 7vh;
+                            top: 40px;
                         }
                         li {
                             padding: 2.5px 10px;
